feat: added more api routes into swagger
